--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "vscode-rustfmt",
 	"displayName": "vscode-rustfmt",
 	"description": "document formatter for single rust file",
+	"publisher": "statiolake",
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.30.0"
