--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"displayName": "vscode-rustfmt",
 	"description": "document formatter for single rust file",
 	"publisher": "statiolake",
-	"version": "0.0.1",
+	"version": "0.1.1",
+	"repository": { "type": "git", "url": "https://github.com/statiolake/vscode-rustfmt/"},
 	"engines": {
 		"vscode": "^1.30.0"
 	},
@@ -22,7 +23,8 @@
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
 		"postinstall": "node ./node_modules/vscode/bin/install",
-		"test": "npm run compile && node ./node_modules/vscode/bin/test"
+		"test": "npm run compile && node ./node_modules/vscode/bin/test",
+		"package": "vsce package"
 	},
 	"devDependencies": {
 		"typescript": "^3.1.4",
