--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "document formatter for single rust file",
 	"publisher": "statiolake",
 	"version": "0.0.1",
+	"repository": { "type": "git", "url": "https://github.com/statiolake/vscode-rustfmt/" },
 	"engines": {
 		"vscode": "^1.30.0"
 	},
@@ -21,14 +22,16 @@
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
-		"postinstall": "node ./node_modules/vscode/bin/install",
-		"test": "npm run compile && node ./node_modules/vscode/bin/test"
+		"lint": "eslint src --ext ts"
 	},
 	"devDependencies": {
-		"typescript": "^3.1.4",
-		"vscode": "^1.1.25",
-		"tslint": "^5.8.0",
-		"@types/node": "^8.10.25",
-		"@types/mocha": "^2.2.42"
-	}
+		"@types/node": "^8.10.66",
+		"@types/vscode": "^1.30.0",
+		"tslint": "^5.20.1",
+		"typescript": "^3.9.10",
+		"eslint": "^7.19.0",
+		"@typescript-eslint/eslint-plugin": "^4.14.1",
+		"@typescript-eslint/parser": "^4.14.1"
+	},
+	"dependencies": {}
 }
