--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"watch": "tsc -watch -p ./",
 		"postinstall": "node ./node_modules/vscode/bin/install",
 		"test": "npm run compile && node ./node_modules/vscode/bin/test",
-		"package": "vsce package"
+		"package": "vsce package",
 		"lint": "eslint src --ext ts"
 	},
 	"devDependencies": {
