--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"displayName": "vscode-rustfmt",
 	"description": "document formatter for single rust file",
 	"publisher": "statiolake",
-	"version": "0.0.1",
-	"repository": { "type": "git", "url": "https://github.com/statiolake/vscode-rustfmt/" },
+	"version": "0.1.1",
+	"repository": { "type": "git", "url": "https://github.com/statiolake/vscode-rustfmt/"},
 	"engines": {
 		"vscode": "^1.30.0"
 	},
@@ -22,6 +22,7 @@
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
+		"package": "vsce package",
 		"lint": "eslint src --ext ts"
 	},
 	"devDependencies": {
